test/type_inference/negative/type_args8.impala
fn f[X](x: X) -> X {
    x
}

fn main() -> () {
    f(|y| y);
}
